--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,12 @@
+* {
+  box-sizing: border-box;
+}
 #root {
   padding: 2rem 3rem;
   display: flex;
   flex-direction: column;
   margin: auto;
-  width: calc(100vh - 6rem);
+  width: 100vw;
 }
 
 body,
@@ -13,7 +16,7 @@ html {
   padding: 0;
   width: 100vw;
   max-width: 100vw;
-  overflow: auto;
+  overflow-y: auto;
 }
 
 h1,
@@ -50,7 +53,7 @@ a {
 }
 
 input {
-  width: 250px;
+  width: 270px;
 }
 button {
   width: 270px;
@@ -83,6 +86,7 @@ nav {
   z-index: 1;
   top: 30px;
   right: 30px;
+  left: 30px;
   font-size: 17px;
   color: #ccff66;
 
